inst/grided/www/main.css
/* Styles for my app */
body {
  --side-gaps: 0.7rem;
  --blue: #007bff;
  --light-gray: #9e9e9e;
  --gray: #cecece;
  --dark-gray: #4f4f4f;
  --off-white: #efefef;
  --off-black: #2c2c2c;
  --edge-round: 5px;
  --element-roundness: 10px;
  --browser-menu-height: 30px;
  --editor-radius: 10px;
  --outline-color: var(--light-gray);
  --editor-left-pad: 160px;
  --editor-top-pad: 110px;
  --grid-gap: 1rem;
}

* {
  text-rendering: geometricprecision !important;
}

/*kill the transitions on any descendant elements of .notransition*/
/* Used for testing */
.notransition * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  -ms-transition: none !important;
  transition: none !important;
}

#grided__holder {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 18px;
  display: grid;
  grid-template-columns: 300px 1fr 150px;
  grid-template-rows: 50px auto auto 1fr;
  grid-template-areas:
    "header       header header"
    "settings     editor editor"
    "instructions editor editor"
    "elements     editor editor";
  padding: var(--side-gaps);
  height: 100vh;
  grid-gap: var(--side-gaps);
  align-items: stretch;
  justify-items: stretch;
  background: white;
}

/* Styles that apply to every panel in grid */
#grided__holder > * {
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  padding: var(--side-gaps);
  border-radius: var(--edge-round);
}

#grided__holder > div > h3 {
  margin: calc(-1 * var(--side-gaps)); /* Make header span top of boxes */
  background: var(--blue);
  padding: calc(0.75 * var(--side-gaps)) var(--side-gaps);
  border-radius: var(--edge-round) var(--edge-round) 0 0;
  color: white;
}
/* Makes icons lineup better with the text in headers */
#grided__holder > div > h3 > svg {
  margin-bottom: -5px;
}

.panel-body {
  margin-top: calc(2 * var(--side-gaps));
}

* {
  box-sizing: border-box;
}

img {
  max-width: 100%;
  max-height: 100%;
}

#grided__header {
  grid-area: header;
  margin: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#grided__header > h2 {
  margin: 0;
}

.code-btns {
  display: flex;
  align-items: center;
}

#grided__header button {
  font-size: 1.2rem;
  height: 100%;
  margin-left: 5px;
}

#grided__settings {
  grid-area: settings;
}

#grided__settings .panel-body {
  position: relative;
}

.settings-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
  align-items: center;
  grid-gap: 0.75rem;
}

.settings-grid > .input-label {
  text-align: right;
  justify-self: end;
}

#grided__instructions {
  grid-area: instructions;
}

#grided__elements {
  grid-area: elements;
}

#grided__elements button.remove-el {
  background: rgba(255, 255, 255, 0);
  border: none;
  cursor: pointer;
}

#grided__editor {
  grid-area: editor;
  /* Leaves space for the row and column editing controls */
  padding-left: var(--editor-left-pad);
  padding-top: var(--editor-top-pad);
  padding-bottom: 1.5rem; /* So the add a row buttons on very bottom arent off screen */
  min-width: 400px; /* So when starting small stuff isn't squished to uselessness */
  overflow: hidden;
  position: relative;
}

#editor-wrapper {
  border: 2px solid var(--outline-color);
  border-radius: var(--editor-radius);
  width: 100%;
  min-height: 100%;
  position: relative;
  display: grid;
  grid-template-rows: var(--browser-menu-height) 1fr;
}

#editor-browser-header {
  --bar-height: 35px; /* Height of the url bar */
  --buttons-width: 70px;
  width: 100%;
  height: 100%;
  border-bottom: 2px solid var(--outline-color);
  border-radius: var(--editor-radius) var(--editor-radius) 0 0;
  background: var(--off-white);
  display: flex;
}

#editor-app-window {
  position: relative;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
}
/* Make position absolute so we can easily position the controls where we want them */
#editor-app-window > div {
  position: absolute;
}

#buttons-container {
  width: var(--buttons-width);
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
#buttons-container > div {
  --button-size: 12px;
  background: var(--blue);
  width: var(--button-size);
  height: var(--button-size);
  border-radius: calc(var(--button-size) / 2);
}

#url-box {
  --vert-offset: 3px;
  --url-box-height: calc(100% - 2 * var(--vert-offset));
  width: calc(100% - var(--buttons-width) - var(--vert-offset));
  margin-top: var(--vert-offset);
  height: var(--url-box-height);
  border: 1px solid black;
  border-radius: calc(var(--bar-height) - 2 * var(--vert-offset));
  display: flex;
  align-items: center;
  overflow: hidden;
}

#url-box > span {
  margin-left: 5px;
  font-family: monospace;
}

.added-element.disabled,
.grid-cell.disabled,
#drag-canvas.disabled {
  opacity: 0;
  pointer-events: none;
}

#added-elements {
  position: relative;
}

#grided__settings > div.disabled::after,
#added-elements.disabled::after {
  content: "Disabled in interact mode";
  white-space: break-spaces;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  padding-top: 1rem;
  text-align: center;
  background: #ffffffe3;
  cursor: not-allowed;
}

